# MemOS

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CODING_STANDARDS.md  PRD.html  PRD_CANONICAL.txt  execution_checklist.md  phases.md
docs/ADRs/: ADR-0001-canonical-commit-hash.md  ADR-0002-key-custody-initial-mode.md  ADR-0003-tenant-isolation-strategy.md  ADR-0004-secrets-management.md  ADR_TEMPLATE.md
docs/compliance/: data_classification_playbook.md  threat_model_v1.md
docs/runbooks/: RUNBOOK_TEMPLATE.md  observability_baseline.md
schemas/events/: memory-commit-v1.json
schemas/openapi/v1/: core.yaml  governance.yaml
schemas/sql/migrations/: 0001_bootstrap_organizations.sql  0002_repositories_and_branches.sql  0003_commits_append_only.sql  0004_memory_nodes.sql  0005_conflicts_and_pull_requests.sql  0006_identity_and_keys.sql  CONVENTION.md
services/memory-core/src/memoryos/: __init__.py  app.py  config.py
services/memory-core/src/memoryos/api/: health.py
services/memory-core/src/memoryos/domain/: __init__.py  enums.py  exceptions.py  models.py  protocols.py
tests/load/: ingest.js  retrieve.js
tests/unit/: test_domain_enums.py  test_domain_exceptions.py  test_domain_models.py
