# ============================================================
# MemoryOS — Version-Controlled Memory Infrastructure for AI
# ============================================================
#
# "GitHub for Agent Memory"
#
# MemoryOS is the version-controlled, auditable, and cryptographically
# secure memory infrastructure layer for production agentic AI.
#
# Canonical PRD: docs/MemOSv2.1_PRD.md
# Execution Plan: docs/phases.md
# Checklist:      docs/execution_checklist.md
# ============================================================

[project]
name = "memoryos"
version = "0.1.0"
description = "Version-controlled, auditable memory infrastructure for production agentic AI"
readme = "README.md"
license = { text = "Proprietary — Confidential" }
requires-python = ">=3.11"
authors = [
    { name = "Antigravity AI" }
]

dependencies = [
    # --- Core ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # --- Database ---
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",

    # --- Vector Store ---
    "qdrant-client>=1.12.0",

    # --- Event Stream ---
    "aiokafka>=0.12.0",

    # --- Cache ---
    "redis[hiredis]>=5.2.0",

    # --- Cryptography ---
    "cryptography>=44.0.0",
    "pynacl>=1.5.0",

    # --- Observability ---
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",

    # --- Embedding (Cloud profile) ---
    "openai>=1.57.0",
    "tiktoken>=0.8.0",

    # --- Utilities ---
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "python-ulid>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "respx>=0.22.0",
]
sovereign = [
    # --- Self-hosted embedding (Sovereign profile) ---
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    "onnxruntime>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services", "sdk/python", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["memoryos"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast isolated tests",
    "integration: tests requiring running services",
    "invariant: system invariant enforcement tests (INV-01..INV-10)",
    "security: security and isolation tests",
    "load: performance and load tests",
    "chaos: resilience and failure mode tests",
    "ml_eval: ML model performance regression tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
